spacing fixed?

--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body{
   margin: 0;
 }
 .wrapper{
-  width:1280px;
+  /* width:1280px; */
+  width: 100vw;
   max-width: 95%;
   margin: 0 auto;
   padding: 0 20px;
@@ -135,6 +136,9 @@ nav .togglebtn span{
   transition-property:  transform, opacity;
 
 }
+
+
+
 nav .navlinks{
   list-style-type: none;
 }
@@ -145,6 +149,8 @@ nav .navlinks li a{
    color:#000;
    margin-right: 2.5rem;
 }
+
+
 .container {
   display: flex;
   justify-content: space-around;
@@ -161,6 +167,8 @@ nav .navlinks li a{
   border: 15px solid #AA142D;
   box-shadow: 5px 7px 25px rgba(0,0,0,0.5);
 }
+
+
 .hero-pic img{
   height: 150%;
   width:150%;
@@ -193,6 +201,8 @@ nav .navlinks li a{
 
 }
 
+
+
 .btn-group{
   margin:45px 0;
 }
@@ -217,16 +227,10 @@ nav .navlinks li a{
   transition: 0.5s;
 }
 
-.hero-text .social i{
-  color: #AA142D;
-  font-size: 18px;
-  margin-right: 10px;
-  transition: 0.5s;
-}
-.hero-text .social i:hover{
-  color:#007ced;
-  transform: rotate(360deg);
-}
+
+
+
+
 
 /* Respnosiv design & displaying navbar for small screen */
 @media(max-width:930px)
